<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Portal Lite</string>
    <string name="str_portal_easier" translatable="false">USING PORTAL EASIER</string>
    <string name="str_rights" translatable="false">Copyright© 2015 CodeRobot Studio all right reserved</string>
    <string name="str_id">Student ID</string>
    <string name="str_passwd">Password</string>
    <string name="str_login">Login</string>
    <string name="str_empty_passwd_id">ID or password should not be empty</string>
    <string name="str_no_network">No internet connection</string>
    <string name="str_schedule">Schedule</string>

    <string-array name="str_array_weekdays" translatable="false">
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>

    <string-array name="str_array_menus" >
        <item>Schedule</item>
        <item>Grade</item>
        <item>Mail</item>
        <item>Grad Check</item>
        <item>Questionnaire</item>
        <item>Test Schedule</item>
        <item>Map</item>
    </string-array>

    <string-array name="str_array_class" translatable="false">
        <item>最新消息</item>
        <item>教材下載</item>
        <item>作業管理</item>
    </string-array>

    <string name="title_activity_class">ClassActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


</resources>
