<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:id="@+id/root"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/layout_login_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/tv_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:text="@string/str_portal_easier"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <EditText
                android:id="@+id/edt_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textWebEmailAddress"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/str_id" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/str_passwd"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_bg"
                android:gravity="center"
                android:text="@string/str_login"
                android:textColor="@drawable/text_color"
                android:textSize="23sp" />
        </LinearLayout>

    </LinearLayout>

    <com.daimajia.numberprogressbar.NumberProgressBar

        android:id="@+id/pgb_login_progress"
        style="@style/NumberProgressBar_Default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:max="100"
        custom:progress_text_color="@android:color/white"/>
</RelativeLayout>
